--- a/css/user_input.css
+++ b/css/user_input.css
@@ -49,3 +49,79 @@
   button[type="submit"]:hover {
     background-color: #0069d9;
   }
+
+  
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 4px 8px;
+  color: #2196f3;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 24px;
+  overflow: hidden;
+  transition: 0.2s;
+}
+.button__line {
+  position: absolute;
+  display: block;
+}
+
+.button__line--top {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(90deg, transparent, #2196f3);
+}
+.button:hover .button__line--top {
+  left: 100%;
+  transition: 1s;
+  transition-delay: 0.25s;
+}
+
+.button__line--bottom {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(270deg, transparent, #2196f3);
+}
+.button:hover .button__line--bottom {
+  right: 100%;
+  transition: 1s;
+  transition-delay: 0.25s;
+}
+
+.button__line--left {
+  bottom: -100%;
+  left: 0;
+  width: 3px;
+  height: 100%;
+  background: linear-gradient(0deg, transparent, #2196f3);
+}
+.button:hover .button__line--left {
+  bottom: 100%;
+  transition: 1s;
+  transition-delay: 0s;
+}
+
+.button__line--right {
+  top: -100%;
+  right: 0;
+  width: 3px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #2196f3);
+}
+.button:hover .button__line--right {
+  top: 100%;
+  transition: 1s;
+  transition-delay: 0s;
+}
+
+.button:hover {
+  box-shadow: 0 0 10px #62fafa, 0 0 40px #62fafa, 0 0 80px #62fafa;
+  background-color: #62fafa;
+  color: #FFFFFF;
+  transition-delay: 0.75s;
+}
